# Questions

./: .gitignore  README.md
12 decorators python/: README.MD
QA/: BASIC.md  BLACK BOX.md  QUESTIONS.md  README.md  TESTS.md  main.py
SQL/: README.md
Selenium/: BASIC.md  README.md  Untitled-1.py  find_beauty_degree.py  hack.py  main.py  password.py  requirements.txt
Testing/: README.md
algorithms/: README.md  climb_stairs.py  first_index_str.py  isPalindrome.py  length_of_last_word.py  longestCommonPrefix.py  longest_subarray.py  megre_two_list.py  multiply.py  plus_one.py  removeElement.py  roman_to_int.py  search_insert.py  squart.py  tasks.py  trap.py  two_sum.py  valid_parentheses.py
bash/: README.md  case.sh  change_whitespace.sh  count.sh  cycle.sh  formatter.sh  hashing.sh  rename.sh  server_config.sh  slice.sh
brokers/: README.md
codewars/: pyproject.toml
dataTypesAndVariables/: README.md
demo/: pom.xml
dictionariesAndSets/: README.md
errorHandling/: README.md
errorHandlingAndDebugging/: README.md
filesAndInputOrConclusion/: README.md
functions/: README.md
java/: First.java
listsAndTuples/: README.md
managementStructures/: README.md
modulesAndLibraries/: README.md
networks/: BACIS.md  QUESTIONS.md
objectOrientedProgramming/: README.md
odrostranichnick/: README.md  lissting_2_7.py  listing_2_10.py  listing_2_6.py  listing_2_9.py  listing_3_23.py  listing_3_24.py  zip_list.py
postgreSQL/: READMe.md
solid/: _dip.py  (+21 more)
web_scraping/: pyproject.toml
web_scraping/web_scraping/: crawl_wiki.py  get_searh.py  get_titlepage.py
(+86 files in other folders)
